--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
 
 </head>
 <body>
-  
+
   <main>
+
+    <section class="card">
+      <div class="card__hero-img"></div>
+      <div class="card__content"></div>
+      <div class="card__plan-info"></div>
+      <div class="card__btn"></div>
+    </section>
+    
+    
 
   Order Summary
 
@@ -41,7 +50,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">KH</a>.
     </div>
   </footer>
 
