Add elements in div card__btn (#46 -#53)

--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
         </div>
       </div>
 
-      <div class="card__btn"></div>
+      <div class="card__btn">
+        <button class="card__btn-pay">
+          <a href="#">Proceed to Payment</a>
+        </button>
+        <button class="card__btn-cancel">
+          <a href="#">Cancel Order</a>
+        </button>
+      </div>
+
     </section>
-    
-
-  Proceed to Payment
-  Cancel Order
-
   </main>
-
-
 
   <footer>
     <div class="attribution">
