--- a/index.html
+++ b/index.html
@@ -25,32 +25,36 @@
       <div class="card__hero-img"></div>
 
       <div class="card__content">
-        <h1>Order Summary</h1>
-        <p>You can now listen to millions of songs,
-          audiobooks, and podcasts on any 
-          device anywhere you like!
-        </p>
-      </div>
-
-      <div class="card__plan">
-        <div class="card__plan-img"></div>
-        <div class="card__plan-info">
-          <h2>Annual Plan</h2>
-          <p>$59.99/year</p>
+        <div class="card__description">
+          <h1>Order Summary</h1>
+          <p>You can now listen to millions of songs,
+            audiobooks, and podcasts on any 
+            device anywhere you like!
+          </p>
         </div>
-        <div class="card__plan-change">
-          <a href="#">Change</a>
-        </div>
-      </div>
 
-      <div class="card__btn">
-        <button class="card__btn-pay">
-          <a href="#">Proceed to Payment</a>
-        </button>
-        <button class="card__btn-cancel">
-          <a href="#">Cancel Order</a>
-        </button>
+        <div class="card__plan">
+          <div class="card__plan-img"></div>
+          <div class="card__plan-info">
+            <h2>Annual Plan</h2>
+            <p>$59.99/year</p>
+          </div>
+          <div class="card__plan-change">
+            <a href="#">Change</a>
+          </div>
+        </div>
+
+        <div class="card__btn">
+          <button class="card__btn-pay">
+            <a href="#">Proceed to Payment</a>
+          </button>
+          <button class="card__btn-cancel">
+            <a href="#">Cancel Order</a>
+          </button>
+        </div>
+
       </div>
+      
 
     </section>
   </main>
