fix: delete anchor tag (#48 - #49)

--- a/index.html
+++ b/index.html
@@ -45,12 +45,8 @@
         </div>
 
         <div class="card__btn">
-          <button class="card__btn-pay">
-            <a href="#">Proceed to Payment</a>
-          </button>
-          <button class="card__btn-cancel">
-            <a href="#">Cancel Order</a>
-          </button>
+          <button class="card__btn-pay">Proceed to Payment</button>
+          <button class="card__btn-cancel">Cancel Order</button>
         </div>
       </div>
       
